Bug 176440 Add optional description attribute to launch shortcuts